--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.4.0"
   },
   "devDependencies": {
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint-plugin-react": "^7.21.2",
+    "gh-pages": "^3.1.0",
     "typescript": "3.7.5"
   },
   "scripts": {
